heart/include/hrt/hrt_scene.h

struct hrt_output;
struct hrt_scene_layer {
    struct wlr_scene_tree *tree;
};
struct hrt_scene_fullscreen_node {
    /// the tree holding the background node as well as the view:
    struct hrt_scene_layer layer;
    struct wlr_scene_rect *background;
    struct hrt_view *view;
};
// It might make more sense for the cl frontend to pass in the x,y, width, and height
// variables instead of the output, but's cleaner this way.
/**
 * Create a hrt_scene_fullscreen_layer with a black bacground of the given size.
 * Mode the hrt_view inside the node, removing it from where ever it was in the scene tree.
 **/
struct hrt_scene_fullscreen_node *
hrt_scene_create_fullscreen_node(struct hrt_scene_layer *layer,
                                 struct hrt_view *view,
                                 struct hrt_output *output);
/**
 * Destroy the given background node, moving the struct hrt_view to the
 * normral layer.
 * Returns the view that was in the node.
 */
struct hrt_view *
hrt_scene_fullscreen_node_destroy(struct hrt_scene_fullscreen_node *node);
uint32_t hrt_scene_node_set_dimensions(struct hrt_scene_fullscreen_node *node,
                                       int width, int height);
void hrt_scene_node_set_position(struct hrt_scene_fullscreen_node *node, int x,
                                 int y);
uint32_t hrt_scene_fullscreen_configure(struct hrt_scene_fullscreen_node *group,
                                        struct hrt_output *output);