heart/include/hrt/hrt_view.h

struct hrt_view;
struct hrt_view_callbacks {
    /**
     * A new view has been created. Must call `hrt_view_init` for the
     * view to be displayed.
     **/
    view_commit_handler new_view;
    // This and the new_view_handler callback could be combined into one, as they are just
    // specializations of the view commit event, but this seems a bit cleaner and more abstract:
    //! Called whenever a mapped view's size changes
    view_commit_handler view_size_changed;
    view_mapped_handler view_mapped;
    view_mapped_handler view_unmapped;
    view_mapped_handler request_minimize;
    view_mapped_handler request_maximize;
    view_destroy_handler view_destroyed;

    view_request_fullscreen request_fullscreen;
};
struct hrt_view {
    int width, height;
    struct wlr_xdg_surface *xdg_surface;
    struct wlr_xdg_toplevel *xdg_toplevel;
    /*
      Contains the tree with the xdg surface tree
      plus decorations and that sort of thing.
     */
    struct wlr_scene_tree *scene_tree;
    struct wlr_scene_tree *xdg_scene;

    // internal state:
    struct wl_listener map;
    struct wl_listener unmap;
    struct wl_listener commit;
    struct wl_listener destroy;
    struct wl_listener new_popup;

    struct wl_listener request_maximize;
    struct wl_listener request_minimize;
    struct wl_listener request_fullscreen;

    const struct hrt_view_callbacks *callbacks;
};