lisp/bindings/hrt-bindings.lisp


(declaim (inline hrt-scene-create-fullscreen-node))
(cffi:defcfun ("hrt_scene_create_fullscreen_node" hrt-scene-create-fullscreen-node) (:pointer (:struct hrt-scene-fullscreen-node))
  "Create a hrt_scene_fullscreen_node with a black bacground of the given size.
Mode the hrt_view inside the node, removing it from where ever it was in the scene tree."
  (group (:pointer (:struct hrt-scene-group)))
  (view (:pointer (:struct hrt-view)))
  (output (:pointer (:struct hrt-output))))

(declaim (inline hrt-scene-fullscreen-node-destroy))
(cffi:defcfun ("hrt_scene_fullscreen_node_destroy" hrt-scene-fullscreen-node-destroy) (:pointer (:struct hrt-view))
  "Destroy the given background node, moving the struct hrt_view to the
normral layer.
Returns the view that was in the node."
  (node (:pointer (:struct hrt-scene-fullscreen-node))))

(declaim (inline hrt-scene-node-set-dimensions))
(cffi:defcfun ("hrt_scene_node_set_dimensions" hrt-scene-node-set-dimensions) :uint32
  (node (:pointer (:struct hrt-scene-fullscreen-node)))
  (width :int)
  (height :int))

(declaim (inline hrt-scene-node-set-position))
(cffi:defcfun ("hrt_scene_node_set_position" hrt-scene-node-set-position) :void
  (node (:pointer (:struct hrt-scene-fullscreen-node)))
  (x :int)
  (y :int))

(declaim (inline hrt-scene-fullscreen-configure))
(cffi:defcfun ("hrt_scene_fullscreen_configure" hrt-scene-fullscreen-configure) :uint32
  (group (:pointer (:struct hrt-scene-fullscreen-node)))
  (output (:pointer (:struct hrt-output))))

;; next section imported from file build/include/hrt/hrt_message.h

(cffi:defcenum window-gravity
  (:gravity-top-right 0)
  (:gravity-top-left 1)
  (:gravity-bottom-right 2)
  (:gravity-bottom-left 3)
  (:gravity-right 4)
  (:gravity-left 5)
  (:gravity-top 6)
  (:gravity-bottom 7)
  (:gravity-center 8)
  (:gravity-max 8))

(cffi:defcstruct hrt-message-theme
  (font (:pointer :char))
  (font-color :float :count 4)
  (background-color :float :count 4)
  (border-color :float :count 4)
  (message-padding :int)
  (message-border-width :int)
  (margin-x :int)
  (margin-y :int))

(declaim (inline hrt-toast-message))
(cffi:defcfun ("hrt_toast_message" hrt-toast-message) :bool
  (server (:pointer (:struct hrt-server)))
  (output (:pointer (:struct hrt-output)))
  (text (:pointer :char))
  (gravity :int #| enum window-gravity |#)
  (theme (:pointer (:struct hrt-message-theme)))
  (ms-delay :int))

;; next section imported from file build/include/hrt/hrt_server.h

(cffi:defcstruct hrt-server
  (wl-display :pointer #| (:struct wl-display) |# )
  (backend :pointer #| (:struct wlr-backend) |# )
  (backend-destroy (:struct wl-listener))
  (session :pointer #| (:struct wlr-session) |# )
  (renderer :pointer #| (:struct wlr-renderer) |# )
  (compositor :pointer #| (:struct wlr-compositor) |# )
  (allocator :pointer #| (:struct wlr-allocator) |# )
  (scene :pointer #| (:struct wlr-scene) |# )
  (scene-layout :pointer #| (:struct wlr-scene-output-layout) |# )
  (new-output (:struct wl-listener))
  (output-manager :pointer #| (:struct wlr-output-manager-v1) |# )
  (output-layout :pointer #| (:struct wlr-output-layout) |# )
  (output-layout-changed (:struct wl-listener))
  (output-manager-apply (:struct wl-listener))
  (output-manager-test (:struct wl-listener))
  (output-manager-destroy (:struct wl-listener))
  (seat (:struct hrt-seat))
  (scene-root (:pointer (:struct hrt-scene-root)))
  (xdg-shell :pointer #| (:struct wlr-xdg-shell) |# )
  (new-xdg-toplevel (:struct wl-listener))
  (new-xdg-popup (:struct wl-listener))
  (output-callback (:pointer (:struct hrt-output-callbacks)))
  (view-callbacks (:pointer (:struct hrt-view-callbacks)))
  (message-timer-source :pointer #| (:struct wl-event-source) |# )
  (message-buffer :pointer #| (:struct wlr-scene-buffer) |# ))

(declaim (inline hrt-server-init))
(cffi:defcfun ("hrt_server_init" hrt-server-init) :bool
  (server (:pointer (:struct hrt-server)))
  (output-callbacks (:pointer (:struct hrt-output-callbacks)))
  (seat-callbacks (:pointer (:struct hrt-seat-callbacks)))
  (view-callbacks (:pointer (:struct hrt-view-callbacks)))
  (log-level :int #| enum wlr-log-importance |#))

(declaim (inline hrt-server-start))
(cffi:defcfun ("hrt_server_start" hrt-server-start) :bool
  (server (:pointer (:struct hrt-server))))

(declaim (inline hrt-server-stop))
(cffi:defcfun ("hrt_server_stop" hrt-server-stop) :void
  (server (:pointer (:struct hrt-server))))

(declaim (inline hrt-server-finish))
(cffi:defcfun ("hrt_server_finish" hrt-server-finish) :void
  (server (:pointer (:struct hrt-server))))

(declaim (inline hrt-server-scene-tree))
(cffi:defcfun ("hrt_server_scene_tree" hrt-server-scene-tree) :pointer #| (:struct wlr-scene-tree) |# 
  (server (:pointer (:struct hrt-server))))

(declaim (inline hrt-server-seat))
(cffi:defcfun ("hrt_server_seat" hrt-server-seat) (:pointer (:struct hrt-seat))
  (server (:pointer (:struct hrt-server))))

(declaim (inline hrt-server-group-create))
(cffi:defcfun ("hrt_server_group_create" hrt-server-group-create) (:pointer (:struct hrt-scene-group))
  (server (:pointer (:struct hrt-server))))

(declaim (inline hrt-server-struct-size))
(cffi:defcfun ("hrt_server_struct_size" hrt-server-struct-size) :size)
